--- a/examples/mlp/cifar10-small.yaml
+++ b/examples/mlp/cifar10-small.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # ----------------------------------------------------------------------------
-# MLP on CIFAR-10 with a Branch layer
+# MLP on CIFAR-10, a quick+small network
 
 !obj:experiments.FitPredictErrorExperiment {
 
@@ -30,12 +30,10 @@
     ],
   },
 
-  weight_inits: [
-    &wt_init !obj:params.UniformValGen {
-      low: -0.1,
-      high: 0.1,
-    },
-  ],
+  weight_inits: &wt_init !obj:params.UniformValGen {
+    low: -0.1,
+    high: 0.1,
+  },
 
   lrule: &gdm {
     type: gradient_descent_momentum,
@@ -50,7 +48,7 @@
 
   model: !obj:models.MLP {
     num_epochs: 100,
-    batch_size: &bs 100,
+    batch_size: &bs 128,
     layers: [
       &datalayer !obj:layers.DataLayer {
         name: d0,
@@ -62,25 +60,6 @@
         lrule_init: *gdm,
         weight_init: *wt_init,
         activation: !obj:transforms.RectLin {},
-      },
-      !obj:layers.BranchLayer {
-        name: blayer,
-        sublayers: [
-          !obj:layers.FCLayer {
-            name: blayer1,
-            nout: 40,
-            lrule_init: *gdm,
-            weight_init: *wt_init,
-            activation: !obj:transforms.RectLin {},
-          },
-          !obj:layers.FCLayer {
-            name: blayer2,
-            nout: 10,
-            lrule_init: *gdm,
-            weight_init: *wt_init,
-            activation: !obj:transforms.RectLin {},
-          },
-        ],
       },
       &lastlayer !obj:layers.FCLayer {
         name: output,
