--- a/examples/convnet/i1k-alexnet-fp16.yaml
+++ b/examples/convnet/i1k-alexnet-fp16.yaml
@@ -56,7 +56,7 @@
     num_workers: 12,
     mean_norm: True, # This just subtracts the mean, but doesn't divide by 128
     unit_norm: False, # This norms magnitude to 1
-    # ntrain: 1, # Commenting this line uses entire dataset
+    # ntrain: 24, # Commenting this line uses entire dataset
     # nval: 1,
     backend_type: &bt np.float16,
   },
@@ -93,7 +93,7 @@
 
   lrule: &gdmwd {
     type: gradient_descent_momentum_weight_decay,
-    backend_type: *bt, ######################################################
+    backend_type: *bt,
     lr_params: {
       learning_rate: 0.0001,
       weight_decay: .0005,
@@ -116,7 +116,6 @@
     num_epochs: 60,
     batch_size: &bs 128,
     step_print: 24,
-    overwrite_list: ['num_epochs'],
     serialized_path: '~/data/I1K/I1K_alexnet_fp16_model.prm',
     layers: [
       &datalayer !obj:layers.ImageDataLayer {
