Added CIFAR100 to the ANNOTED_EXAMPLE.

--- a/examples/ANNOTATED_EXAMPLE.yaml
+++ b/examples/ANNOTATED_EXAMPLE.yaml
@@ -65,6 +65,7 @@
   # dataset - The input data to train/test against.  types:
   #           MNIST - handwritten digit image dataset
   #           CIFAR10 - 10 class object image dataset
+  #           CIFAR100 - 100 class object image dataset
   #           I1K - Imagenet 1000 class image dataset
   #           I1Knq - Imagenet 1000 class image dataset (non-queueing)
   #           SPARSENET - small natural image dataset (Olshausen and Field)
