Added housing data, simple regression network.
Still to tune example, closes MYL-258, closes #33

--- a/examples/ANNOTATED_EXAMPLE.yaml
+++ b/examples/ANNOTATED_EXAMPLE.yaml
@@ -63,15 +63,14 @@
   # Fit*Experiment parameters:
   # --------------------------
   # dataset - The input data to train/test against.  types:
-  #           MNIST - handwritten digit image dataset
   #           CIFAR10 - 10 class object image dataset
   #           CIFAR100 - 100 class object image dataset
-  #           I1K - Imagenet 1000 class image dataset
-  #           I1Knq - Imagenet 1000 class image dataset (non-queueing)
-  #           SPARSENET - small natural image dataset (Olshausen and Field)
+  #           Housing - Boston housing dataset
   #           Imageset - Generic macro batched image dataset support
   #           Iris - RA Fisher's 3 class flower dataset
+  #           MNIST - handwritten digit image dataset
   #           MOBYDICK - Content of the book Moby Dick
+  #           SPARSENET - small natural image dataset (Olshausen and Field)
   #           UniformRandom - synthetic random data
   #           ToyImages - synthetic image classification dataset
   # weight_init - controls initial value setup for the model weights.  types:
