--- a/examples/recurrent/mobydick-rnn-small.yaml
+++ b/examples/recurrent/mobydick-rnn-small.yaml
@@ -52,9 +52,9 @@
   lrule: &gdm {
     type: gradient_descent_momentum,
     lr_params: {
-      learning_rate: 0.002,  #  0.002 for RNN, 0.2 for LSTM
+      learning_rate: 0.002,  # try 0.002 for RNN, 0.2 for LSTM to start with
       momentum_params: {
-        type: linear_monotone, # constant, nesterov dont work
+        type: linear_monotone,
         initial_coef: 0.9,
         saturated_coef: 0.99,
         start_epoch: 10,
@@ -65,6 +65,35 @@
 
   # simple RNN model specification
   model: !obj:models.RNN {
+    # RNN model parameters
+    # --------------------
+    # num_grad_params - structure containing the parameters for numerical
+    #                   gradient checks specific to recurrent networks.
+    # reset_period - Number of time unrolling steps after which the hidden
+    #                state is reset back to zero
+    # truncate - Backpropagation through time is truncated after the specified
+    #             number of time unrolling steps (boolean)
+    # unrolls - number of time unrolling steps
+    # make_plots - RNN specific plots that show weight matrices and track
+    #              convergence of cross-entropy error.
+    # batch_size - number of training instances in each mini-batch.  Should
+    #              be no larger than the size of the training dataset.
+    # num_epochs - the number of iterations through the entire training set
+    #              to make in training the model
+    # serialized_path - the full location and name to a serialized .prm file
+    #                   that we will use to cache this model.  Speeds up
+    #                   subsequent use of this model for inference purposes.
+    # deserialize_path - the full location and name to deserialize a .prm file
+    #                    from that we will use to initialize this model.
+    #                    Defaults to serialized_path if deserialize_path
+    #                    doesn't exist
+    # serialize_schedule - either an int specifying the epoch interval at
+    #                      at which to save snapshots of the model, or a list
+    #                      of ints specifying the epochs at which to save.
+    # layers - list of neural network layer objects.  Models will typically
+    #          have a single DataLayer, followed by 1 or more hidden layers,
+    #          then a final CostLayer.
+
     num_epochs: 10,
     batch_size: &bs 64,
     reset_period: 50,  # 50 for LSTM, 20 for RNN?
@@ -74,6 +103,21 @@
     # Note: Numerical gradient checking is only supported with CPU fp64 backend
     backend_type: *bt,
     num_grad_params: {
+      # Parameters for numerical graient checking
+      #------------------------------------------
+      # name - name of the layer where the gradient check should be performed.
+      #        for standard RNNs, "input", "rec" and "output" are supported,
+      #        for LSTM networks, "input", "outputs", data inputs to the LSTM
+      #        cell "lstm_ix" "lstm_fx" "lstm_ox" "lstm_cx" and recurrent
+      #        inputs to the LSTM cell "lstm_ih" "lstm_fh" "lstm_oh" "lstm_ch"
+      # eps - stepsize used for numerical gradient computation. 1e-6 works well
+      #       if a 64 bit double precision backend is used
+      # x,y - element used for "input"
+      # x,z - element used for "rec"
+      # u,v - element used for "output"
+      # x,y - element used for "lstm_x" (all four gates)
+      # x,w - element used for "lstm_h" (all four gates)
+
       name: output,  # For RNN: output, input, rec.
                      # For LSTM: lstm_fx, lstm_ih, lstm_fh, lstm_oh, lstm_ch
       eps: 0.000001, # use 1e-6 and fp64 if possible
@@ -93,6 +137,13 @@
         nout: *dd,
       },
       !obj:layers.RecurrentHiddenLayer {
+        # RecurrentHiddenLayer parameters
+        # -------------------------------
+        # Apart from feed forward layers, recurrent layers have parameters:
+        # unrolls - number of time unrolling steps
+        # gate_actiavation - Only used for LSTM layers. Activation function
+        #                    for input, output and forget gate.
+
         name: recurrent,
         backend_type: *bt,
         lrule_init: *gdm,
