changed tox.ini to stop py34 test from overwriting py27 nosetests.xml file

--- a/tox.ini
+++ b/tox.ini
@@ -31,4 +31,6 @@ setenv =
   LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/lib:/Developer/NVIDIA/CUDA-6.5/bin:/usr/local/lib:{env:LD_LIBRARY_PATH:}
 whitelist_externals = make
 install_command = make {posargs:-e CPU=1} {packages} install
-commands = make {posargs:-e CPU=1} test
+commands =
+	make {posargs:-e CPU=1} build
+	nosetests --with-xunit --xunit-file=nosetests-{envname}.xml -a '!slow','!cuda' neon
