--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ setenv =
   PATH={envbindir}:/usr/local/cuda/bin:/Developer/NVIDIA/CUDA-6.5/bin:{env:PATH:}
   LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/lib:/Developer/NVIDIA/CUDA-6.5/bin:/usr/local/lib:{env:LD_LIBRARY_PATH:}
 whitelist_externals = make
+			bash
 install_command = make {posargs:-e CPU=1} {packages} install
 commands =
-	make {posargs:-e CPU=1} build
-	nosetests --with-xunit --xunit-file=nosetests-{envname}.xml -a '!slow','!cuda' neon
+	make {posargs:-e CPU=1} NOSE_FLAGS="--with-xunit --xunit-file=nosetests-{envname}.xml" test 
