Implemented validation set splitting.

--- a/examples/ANNOTATED_EXAMPLE.yaml
+++ b/examples/ANNOTATED_EXAMPLE.yaml
@@ -142,6 +142,8 @@
     #             the Iris dir directly)
     # sample_pct - if 100, full dataset will be used, otherwise we uniformly
     #              downsample records to the specified percentage
+    # validation_pct - creates validation dataset with this percentage of the 
+    #                  train set
     repo_path: '~/data',
     sample_pct: 100,
   },
