Remove references to DIST, MGPU tests with < 2 devices

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 # and then run "tox" from this directory.
 # This will generate CPU only tests, to get other tests, pass in the
 # appropriate make build arguments, ex:
-# tox -- -e CPU=1 GPU=1 DIST=1
+# tox -- -e CPU=1 GPU=1
 
 [tox]
 envlist = py27, py34
