--- a/examples/convnet/synthetic-sanity_check.yaml
+++ b/examples/convnet/synthetic-sanity_check.yaml
@@ -68,6 +68,15 @@
         nofm: 16,
         fshape: [3, 3],
       },
+      !obj:layers.CrossMapResponseNormLayer {
+        name: layer8,
+        lrule_init: *gdm,
+        alpha: 1.0,
+        ksize: 5,
+        beta: 2.0,
+        activation: !obj:transforms.Linear {},
+        weight_init: *wt_init,
+      },
       !obj:layers.PoolingLayer {
         name: layer1,
         op: 'max',
