--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,6 @@
 # ----------------------------------------------------------------------------
 
 [flake8]
-exclude = .git,__init__.py
+exclude = .git,__init__.py,neon/backends/kernel_specs.py,neon/backends/convnet-benchmarks.py
 max-line-length = 99
+ignore = E123,E133,E203,E221,E226,E241,E242,E265
