Modify style check

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,5 @@
 # ----------------------------------------------------------------------------
 
 [flake8]
-exclude = .git,__init__.py,neon/backends/kernel_specs.py,neon/backends/convnet-benchmarks.py
+exclude = .git,__init__.py,neon/backends/kernel_specs.py,neon/backends/convnet-benchmarks.py,neon/backends/layer_gpu.py,neon/backends/nervanagpu.py,neon/backends/float_ew.py,neon/backends/make_kernels.py
 max-line-length = 99
-ignore = E123,E133,E203,E221,E226,E241,E242,E265
