Guided Backprop visualization cleanup
- speed up max activation compute using gpu
- default to only using 25% dataset and first 16 fm per layer for vis
- reduce output file size using more compact data types in h5

- add DataTransform layer, use for normalizing imagenet data for allcnn
- nvis generate summary view for all layer feature map visualizations
- neon progress bar during visualization

- cleanup and style fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.sublime-workspace
 *.pyc
 *.pkl
+*.prm
 *.so
 *.swp
 .DS_Store
@@ -20,6 +21,7 @@ generated
 *.h5
 *.html
 *.txt
+*.log
 neon_help_output.txt
 neon/backends/util/cuda_capability
 neon/backends/kernels/cu
