New CUDA-C pooling kernels - added a set of max and average pooling kernels that replace previous sass kernels. Removes use   of atomics in overlapping bprop. Adds templating for more flexible dtype handling and statistics   collection. - CPU backend and unit tests updated to follow new API for pooling. - modified hgemm and hpool SASS kernels for more flexible dtype handling and statistics collection - refactored float_ew to move cuda template code into separate files

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,5 @@
 # ----------------------------------------------------------------------------
 
 [flake8]
-exclude = .git,__init__.py,neon/backends/kernel_specs.py,neon/backends/convnet-benchmarks.py,neon/backends/layer_gpu.py,neon/backends/nervanagpu.py,neon/backends/float_ew.py,neon/backends/make_kernels.py
+exclude = .git,__init__.py,neon/backends/test_pool.py,neon/backends/kernel_specs.py,neon/backends/convnet-benchmarks.py,neon/backends/layer_gpu.py,neon/backends/nervanagpu.py,neon/backends/float_ew.py,neon/backends/make_kernels.py,neon/backends/kernels/cuda/pooling.py,neon/backends/cuda_batchnorm.py
 max-line-length = 99
